<resources>
    <string name="app_name">My Movie Memoir</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Navigation</string>
    <string name="nav_header_subtitle">Welcome to movie memoir</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_movie_search">Movie Search</string>
    <string name="menu_movie_memoir"> Movie Memoir</string>
    <string name="menu_watchlist">Watchlist</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_maps">Maps</string>

    <string-array name="array_state">
        <item>VIC</item>
        <item>NT</item>
        <item>SA</item>
        <item>ACT</item>
        <item>WA</item>
        <item>QLD</item>
        <item>TAS</item>
        <item>NSW</item>
    </string-array>

    <string-array name="array_year">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <string-array name="array_cinema">
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
