<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_movie_search"
            android:icon="@drawable/search"
            android:title="@string/menu_movie_search" />
        <item
            android:id="@+id/nav_movie_memoir"
            android:icon="@drawable/movie_nav_icon"
            android:title="@string/menu_movie_memoir" />
        <item
            android:id="@+id/nav_watchlist"
            android:icon="@drawable/list_icon"
            android:title="@string/menu_watchlist" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/report_icon"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/map_icon"
            android:title="@string/menu_maps" />





    </group>
</menu>
